Add classifications to the public interface

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -169,6 +169,7 @@ section {
 .icon-accession {background-position: -168px -24px;}
 .icon-subject {background-position: 0 -48px;}
 .icon-repository {background-position: 0 -144px;}
+.icon-classification {background-position: -25px -48px;}
 
 
 .results-list {
