--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -487,3 +487,13 @@ div.progress-container {
     margin: 0;
   }
 }
+
+#component_switch {
+  border-bottom: 1px @hrBorder solid;
+  padding: @baseLineHeight/2 0;
+  margin-bottom: @baseLineHeight;
+
+  #component_switch_checkbox {
+    margin: 0;
+  }
+}
