Fix asset paths in hudmol skin (broken after less-rails upgrade)

--- a/frontend/app/assets/stylesheets/themes/hudmol/hudmol.less
+++ b/frontend/app/assets/stylesheets/themes/hudmol/hudmol.less
@@ -3,7 +3,7 @@
 .branding {
   display: block;
   height: 60px;
-  background-image: url(hudmol.png), url(bg_branding.png);
+  background-image: asset-url("themes/hudmol/hudmol.png"), asset-url("themes/hudmol/bg_branding.png");
   background-repeat: no-repeat,repeat;
   background-position: 20px 50%, 0 0;
   padding: 0 20px;
