added a config option to disable user registration through the frontend. enabled by default

--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -52,7 +52,9 @@
     <a class="session-actions dropdown-toggle" href="#" data-toggle="dropdown"><%= I18n.t("navbar.login") %></a>
     <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
        <%= render :partial => "shared/login" %>
-       <p><%= I18n.t "navbar.register_prefix" %> <%= link_to I18n.t("navbar.register"), {:controller => "users", :action => "new"}, :class => "boring-link" %></p>
+       <% if AppConfig[:allow_user_registration] %>
+         <p><%= I18n.t "navbar.register_prefix" %> <%= link_to I18n.t("navbar.register"), {:controller => "users", :action => "new"}, :class => "boring-link" %></p>
+       <% end %>
     </div>
   </li>
 <% end %>
