--- a/public/app/views/search/_filter.html.erb
+++ b/public/app/views/search/_filter.html.erb
@@ -14,7 +14,7 @@
       <% if @search_data.filtered_terms? %>
         <% @search_data[:criteria]["filter_term[]"].each do | filter_term | %>
           <li>
-            <%= link_to "#{@search_data.facet_label_for_filter(filter_term)} <span class='icon icon-remove'></span>".html_safe, params_for_search({"remove_filter_term" => filter_term}) %>
+            <%= link_to "#{@search_data.facet_label_for_filter(filter_term, @term_map)} <span class='icon icon-remove'></span>".html_safe, params_for_search({"remove_filter_term" => filter_term}) %>
           </li>
         <% end %>
       <% end %>
