Add batch_delete_controller to handle batch deletes in the frontend -- implemented for archival records initially

--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -17,7 +17,7 @@
              <div class="pull-right">
                <%= link_to I18n.t("resource._frontend.action.create"), {:controller => :resources, :action => :new}, :class => "btn btn-small" %>
                <% if user_can?("delete_archival_record") %>
-                <%= button_delete_multiple_action %>
+                <%= button_delete_multiple_action(:archival_records) %>
                <% end %>
              </div>
            </div>
