--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -17,7 +17,7 @@
             <div class="pull-right">
               <%= link_to I18n.t("accession._frontend.action.create"), {:controller => :accessions, :action => :new}, :class => "btn btn-small" %>
               <% if user_can?("delete_archival_record") %>
-                <%= button_delete_multiple_action %>
+                <%= button_delete_multiple_action(:archival_records) %>
               <% end %>
             </div>
           </div>
