--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -1,5 +1,9 @@
 <%= setup_context(:title => I18n.t("subject._plural")) %>
 
+<%
+   @show_multiselect_column = user_can?("delete_archival_record")
+%>
+
 <div class="row-fluid">
   <div class="span3">
     <%= render :partial => "search/filter" %>
@@ -9,8 +13,11 @@
       <div class="row-fluid">
         <div class="span12">
           <div class="record-toolbar">
-            <div class="btn-group pull-right">
+            <div class="pull-right">
               <%= link_to I18n.t("subject._frontend.action.create"), {:controller => :subjects, :action => :new}, :class => "btn btn-small" %>
+              <% if user_can?('delete_subject_record') %>
+                <%= button_delete_multiple_action(:subjects) %>
+              <% end %>
             </div>
           </div>
         </div>
