--- a/frontend/app/views/classifications/index.html.erb
+++ b/frontend/app/views/classifications/index.html.erb
@@ -1,5 +1,9 @@
 <%= setup_context :title => I18n.t("classification._plural") %>
 
+<%
+   @show_multiselect_column = user_can?("delete_classification_record")
+%>
+
 <div class="row-fluid">
    <div class="span3">
      <%= render :partial => "search/filter" %>
@@ -9,8 +13,11 @@
        <div class="row-fluid">
          <div class="span12">
            <div class="record-toolbar">
-             <div class="btn-group pull-right">
+             <div class="pull-right">
                <%= link_to I18n.t("classification._frontend.action.create"), {:controller => :classifications, :action => :new}, :class => "btn btn-small" %>
+               <% if user_can?("delete_classification_record") %>
+                 <%= button_delete_multiple_action(:classifications) %>
+               <% end %>
              </div>
            </div>
          </div>
