--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -1,7 +1,7 @@
 <%= setup_context(:title => I18n.t("subject._plural")) %>
 
 <%
-   @show_multiselect_column = user_can?("delete_archival_record")
+   @show_multiselect_column = user_can?("delete_subject_record")
 %>
 
 <div class="row-fluid">
