--- a/frontend/app/views/repositories/_form_container.html.erb
+++ b/frontend/app/views/repositories/_form_container.html.erb
@@ -41,7 +41,7 @@
   <% end %>
 
   <h3><%= I18n.t("agent_contact._plural") %></h3>
-  <% form.push("agent_representation", form['agent_representation']) do |form| %>
+  <% form.push("agent_representation", form['agent_representation'] || {}) do |form| %>
     <%= form.list_for(form['agent_contacts'], "agent_contacts[]") do |item| %>
       <% form.emit_template("agent_contact", item) %>
     <% end %>
