--- a/frontend/app/views/repositories/edit.html.erb
+++ b/frontend/app/views/repositories/edit.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="span9">
         <div class="record-pane">
-          <h2><%= @repository.id %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
+          <h2><%= @repository.repository['name'] %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
           <br/>
 
           <%= render :partial => "repositories/form_container", :locals => {:form => form} %>
