--- a/frontend/app/views/repositories/show.html.erb
+++ b/frontend/app/views/repositories/show.html.erb
@@ -7,12 +7,12 @@
   <div class="span9">
     <%= render :partial => "repositories/toolbar" %>
     <div class="record-pane">
-      <h2><%= @repository.id %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
+      <h2><%= @repository.repository['name'] %>  <span class="label label-info"><%= I18n.t("repository._singular") %></span></h2>
 
       <%= readonly_context :repository, @repository do |readonly| %>
         <%= render :partial => "repositories/form_container", :locals => {:form => readonly} %>
       <% end %>
-      <%# read_only_view(@repository.to_hash) %>
+
     </div>
   </div>
 </div>
