--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -623,9 +623,45 @@ $(function() {
       });
     };
 
+    var formatJSONForJSTree = function(node_json) {
+      var result = {
+        data: {
+          title: AS.renderTemplate("tree_node_template", {node: node_json}),
+          attr: {
+            href: "#tree::"+node_json.node_type+"_"+node_json.id,
+            title: AS.encodeForAttribute(node_json.title)
+          }
+        },
+        attr: {
+          id: node_json.node_type + "_" + node_json.id,
+          rel: node_json.node_type,
+          "data-id": node_json.id,
+          "data-uri": node_json.record_uri,
+          class: node_json.node_type
+        }
+      };
+
+      if (node_json.hasOwnProperty("children") && node_json.children.length > 0) {
+        result["children"] = $.makeArray(node_json.children).map(function(child_id) {return formatJSONForJSTree(AS.tree_data[child_id])})
+      }
+
+      return result;
+    };
+
 
     var initTree = function(onTreeLoadCallback) {
       $tree.jstree({
+        "json_data": {
+          "progressive_unload": true,
+          "progressive_render": true,
+          "data": function(node, callback) {
+            if (node === -1) {
+              callback(formatJSONForJSTree(AS.tree_data[$tree.data("root-id")]));
+            } else {
+              callback(formatJSONForJSTree(AS.tree_data[node.attr("id")]).children);
+            }
+          }
+        },
         "themes": {
           "theme": "default",
           "url": "<%= asset_path('jstree/style.css') %>"
@@ -661,7 +697,8 @@ $(function() {
           }
         },
         "core": {
-          "animation": 0
+          "animation": 0,
+          "html_titles": true
         },
         "cookies": {
           "save_selected": false
@@ -693,7 +730,7 @@ $(function() {
           "f2": false,
           "del": false
         },
-        "plugins": [ "themes", "html_data", "ui", "crrm", "dnd", "cookies","hotkeys"]
+        "plugins": [ "themes", "json_data", "ui", "crrm", "dnd", "cookies","hotkeys"]
       }).one("loaded.jstree", function() {
           getPrimarySelectedNode().removeClass("selected");
 
@@ -800,7 +837,6 @@ $(function() {
         });
     };
 
-    $tree.html(AS.renderTemplate("tree_template", {tree: AS.tree_data, config: config}));
     initTree(function() {
       loadPaneForNode(getPrimarySelectedNode());
     });
