Frontend changes for merge

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -10,6 +10,8 @@
 //= require rights_statements.crud
 //= require form
 //= require rde
+//= require merge_dropdown
+
 
 $(function() {
   $.fn.init_resource_form = function() {
