--- a/frontend/app/views/shared/_merge_dropdown.html.erb
+++ b/frontend/app/views/shared/_merge_dropdown.html.erb
@@ -21,14 +21,14 @@
              button_confirm_action(I18n.t("actions.merge"),
                                    url_for({:controller => controller, :action => :merge, :id => record.id}.merge(extra_params)),
                                    {
-                                     :class => "btn btn-primary pull-left merge-button",
+                                     :class => "btn pull-left merge-button",
                                      :"data-title" => confirmation_title,
                                      :"data-message" => confirmation_msg,
                                      :"data-confirm-btn-label" => "#{I18n.t("actions.merge")}",
-                                     :"data-confirm-btn-class" => "btn-primary"
+                                     :"data-confirm-btn-class" => "btn"
                                    })
           %>
-          <a class="btn btn-cancel pull-right" href="#"><%= I18n.t("actions.cancel") %></a>
+          <a class="btn pull-right" href="#"><%= I18n.t("actions.cancel") %></a>
         </div>
         <% end %>
       <% end %>
