--- a/frontend/app/views/shared/_resource_toolbar.html.erb
+++ b/frontend/app/views/shared/_resource_toolbar.html.erb
@@ -11,6 +11,21 @@
           <button type="submit" class="btn btn-primary btn-small"><%= I18n.t("actions.save_prefix") %></button>
         </div>
       <% end %>
+
+      <% if user_can?('merge_archival_record') %>
+        <div class="pull-left">
+          <%=
+             render :partial => "shared/merge_dropdown",
+                    :locals => {:record => record,
+                                :controller => controller.controller_name,
+                                :confirmation_title => I18n.t("actions.merge_confirm_title"),
+                                :confirmation_msg => I18n.t("actions.merge_resource_confirm_message",
+                                                            :target => record.title)}
+          %>
+        </div>
+      <% end %>
+
+
       <% if ['edit', 'update'].include?(controller.action_name) %>
         <div class="pull-left revert-changes">
           <%= link_to I18n.t("actions.revert"), {:action => :edit, :id => record.id}, :class => "btn btn-small" %>
