--- a/public/app/views/records/accession.html.erb
+++ b/public/app/views/records/accession.html.erb
@@ -1,6 +1,5 @@
 <%
-  record_title = @resource['finding_aid_status'] === "completed" ? @resource['finding_aid_title'] : @resource.title
-  set_title(record_title)
+  set_title(@accession.label)
 %>
 <div class="title-pane">
   <div class="row-fluid">
@@ -8,7 +7,7 @@
 
     </div>
     <div class="span9">
-      <h2><%= record_title %></h2>
+      <h2><%= @accession.label %></h2>
     </div>
   </div>
 </div>
@@ -18,13 +17,13 @@
       <%= render(:partial => 'navlist',
                  :locals => {
                    :record_type => 'resource',
-                   :record => @resource,
+                   :record => @accession,
                    :entries => [
                      {:property => 'dates', :subrecord_type => 'date', :anchor => 'dates'},
                      {:property => 'extents', :subrecord_type => 'extent', :anchor => 'extents'},
                      {:property => 'published_agents', :subrecord_type => 'agent', :anchor => 'linked_agents'},
+                     {:property => 'published_related_resources', :subrecord_type => 'resource', :anchor => 'resources'},
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
-                     {:property => 'notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                      {:property => 'digital_objects', :subrecord_type => 'digital_object', :anchor => 'external_documents'},
                    ]
@@ -39,31 +38,31 @@
           <dl class="dl-horizontal">
             <dt><%= I18n.t("resource.id_0") %></dt>
             <dd class="identifier-display">
-              <% ['id_0','id_1','id_2','id_3'].collect{|prop| @resource[prop]}.each do |id| %>
+              <% ['id_0','id_1','id_2','id_3'].collect{|prop| @accession[prop]}.each do |id| %>
                 <span class="identifier-display-part"><%= id %></span>
               <% end %>
             </dd>
-            <% if @resource['finding_aid_status'] === "completed" %>
+            <% if @accession['finding_aid_status'] === "completed" %>
               <div class="clearfix"></div>
-              <%= label_and_value I18n.t("resource.finding_aid_author"), @resource['finding_aid_author'] %>
-              <%= label_and_value I18n.t("resource.finding_aid_date"), @resource['finding_aid_date'] %>
-              <%= label_and_value I18n.t("resource.finding_aid_description_rules"), i18n_enum(:resource, 'finding_aid_description_rules', @resource['finding_aid_description_rules']) %>
-              <%= label_and_value I18n.t("resource.finding_aid_language"), @resource['finding_aid_language'] %>
-              <%= label_and_value I18n.t("resource.finding_aid_sponsor"), @resource['finding_aid_sponsor'] %>
-              <%= label_and_value I18n.t("resource.finding_aid_edition_statement"), @resource['finding_aid_edition_statement'] %>
-              <%= label_and_value I18n.t("resource.finding_aid_series_statement"), @resource['finding_aid_series_statement'] %>
-              <%= label_and_value I18n.t("resource.finding_aid_note"), @resource['finding_aid_note'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_author"), @accession['finding_aid_author'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_date"), @accession['finding_aid_date'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_description_rules"), i18n_enum(:resource, 'finding_aid_description_rules', @accession['finding_aid_description_rules']) %>
+              <%= label_and_value I18n.t("resource.finding_aid_language"), @accession['finding_aid_language'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_sponsor"), @accession['finding_aid_sponsor'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_edition_statement"), @accession['finding_aid_edition_statement'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_series_statement"), @accession['finding_aid_series_statement'] %>
+              <%= label_and_value I18n.t("resource.finding_aid_note"), @accession['finding_aid_note'] %>
             <% end %>
           </dl>
         </section>
 
-        <%= render :partial => "dates", :locals => {:dates => @resource['dates']} %>
-        <%= render :partial => "extents", :locals => {:extents => @resource['extents']} %>
-        <%= render :partial => "agents", :locals => {:linked_agents => @resource.published_agents} %>
-        <%= render :partial => "subjects", :locals => {:subjects => @resource['subjects']} %>
-        <%= render :partial => "notes", :locals => {:notes => @resource['notes']} %>
-        <%= render :partial => "external_documents", :locals => {:external_documents => @resource.published_external_documents} %>
-        <%= render :partial => "instances", :locals => {:digital_objects => @resource.digital_objects} %>
+        <%= render :partial => "dates", :locals => {:dates => @accession['dates']} %>
+        <%= render :partial => "extents", :locals => {:extents => @accession['extents']} %>
+        <%= render :partial => "agents", :locals => {:linked_agents => @accession.published_agents} %>
+        <%= render :partial => "resources", :locals => {:resources => @accession.published_related_resources} %>
+        <%= render :partial => "subjects", :locals => {:subjects => @accession['subjects']} %>
+        <%= render :partial => "external_documents", :locals => {:external_documents => @accession.published_external_documents} %>
+        <%= render :partial => "instances", :locals => {:digital_objects => @accession.digital_objects} %>
         <%= render :partial => "components", :locals => {
               :record_type => "resource",
               :show_full_component => @show_components
