--- a/public/app/views/records/digital_object.html.erb
+++ b/public/app/views/records/digital_object.html.erb
@@ -27,6 +27,7 @@
                      {:property => 'published_agents', :subrecord_type => 'agent', :anchor => 'linked_agents'},
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
                      {:property => 'notes', :subrecord_type => 'note', :anchor => 'notes'},
+                     {:property => 'published_linked_instances', :subrecord_type => 'instance', :anchor => 'linked_instances'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                    ]
                  })
@@ -51,6 +52,7 @@
         <%= render :partial => "subjects", :locals => {:subjects => @digital_object['subjects']} %>
         <%= render :partial => "notes", :locals => {:notes => @digital_object['notes']} %>
         <%= render :partial => "external_documents", :locals => {:external_documents => @digital_object.published_external_documents} %>
+        <%= render :partial => "linked_instances", :locals => {:records => @digital_object.published_linked_instances} %>
         <%= render :partial => "components", :locals => {:record_type => "digital_object"} %>
       </fieldset>
 
